Fixes misaligned clear button in search filter.

--- a/tool-ui/src/main/webapp/style/v3/search.less
+++ b/tool-ui/src/main/webapp/style/v3/search.less
@@ -210,7 +210,7 @@
 
     position: absolute;
     right: 25px;
-    top: 3px;
+    top: 5px;
   }
 
   &.searchFilter-date {
